<resources>
    <string name="app_name">Тест по патриотическому воспитанию</string>
    <string name="a1">ФИ ученика</string>
    <string name="a2">Класс</string>
    <string name="a3">1. Великая отечественная война началась?</string>
    <string name="a4">22 июня 1941 года</string>
    <string name="a5">1 января 1943</string>
    <string name="a6">9 мая 1945</string>
    <string name="a7">2. Первыми удар врага приняли:</string>
    <string name="a8">Войны Бресткой крепости</string>
    <string name="a9">Защитники Минска</string>
    <string name="a10">Жители Витебска</string>
    <string name="a11">3. Назовите деревню, сожжённую в марте 1943 года фашистким карательным отрядом. Сейчас на этом месте мемориальный комплекс - символическое кладбище всех сожжённых деревень</string>
    <string name="a12">Хатынь</string>
    <string name="a13">Дальва</string>
    <string name="a14">Яновичи</string>
    <string name="a15">4. Этот лётчик, родившийся в Беларуси, в одном из воздушных боёв в составе группы уничтожил 9 вражестких самолётовв. Имя герояя</string>
    <string name="a16">Валерий Чкалов</string>
    <string name="a17">Александр Горовец</string>
    <string name="a18">Александр Покрышкин</string>
    <string name="a19">5. На железнодорожной станции Орша подпольщики организовали изготовление мин, которыми взрывали поезда захватчиков, принимая участие в #34 рельсовой войне. #34; Кто стоял во главе этой подпольной организации</string>
    <string name="a20">Контантин Заслонов</string>
    <string name="a21">Александр Фроликов</string>
    <string name="a22">Константин Рокоссовский</string>
    <string name="a23">6. На фронте эта девушка была санинструктором и спасла жизнь более чем ста солдатам и командироам. В одном из боёв она была тяжело ранена. Девушка осталась жива, но руки и ноги пришлось ампутировать. После войны она часто выступала перед школьниками, молодыми воинами. Воспитала сына и дочь. Нвзовите имя этой самоотверженной женщины.</string>
    <string name="a24">Зинаида Портнова</string>
    <string name="a25">Зинаида Туснолобова-Марченко</string>
    <string name="a26">Зоя Космодемьянская</string>
    <string name="a27">7. Этот белорусский детский писатель во время войны был призван в Военноморской флот и служил на Дальнем Востоке. Награждён орденами и медалями. Назовите его имя. </string>
    <string name="a28">Василь Быков</string>
    <string name="a29">Иван Муравейко</string>
    <string name="a30">Артур Вольский</string>
    <string name="a31">8. 11 мая 1944, когда то освобождения родной земли оставалось почти два месяца, этот юный герой возвращался из разведки. Встретился со связным, но вдруг налетели
каратели. Когда закончились патроны, бросил гранату. Фашисты всё плотней окружали юного партизана. Он выхватил последнюю гранату. Грянул взрыв. Погибло много врагов. Юный разведчик
геройски погиб. В одном из парков Минска стоит бронзовый памятник этому пионеру-герою. Нвзовите его имя.</string>
    <string name="a32">Валя Котик</string>
    <string name="a33">Марат Казей</string>
    <string name="a34">Вася Коробко</string>
    <string name="a35">9. В этих местах в июле 1944 года во время операции #34 Багратион #34 в окружение попала 105-тысячная группировка гитлеровских войск. Разгром немецких войск
получил название #34 Минский костёл #34 и стал решающим шагом на пути к освобождению Беларуси. После войны здесь был сооружён</string>
    <string name="a36">Вечный огонь</string>
    <string name="a37">Монумент Победы</string>
    <string name="a38">Курган Славы</string>
    <string name="a39">10. День освобождения Беларуси от немецко-фашистких захватчиков</string>
    <string name="a40">9 мая 1945 года</string>
    <string name="a41">5 марта 1943 года</string>
    <string name="a42">3 июля 1944</string>
    <string name="a43">11. В далёком Берлине воин-белорус спас немецкую девочку, а сам был ранен. Через четыре года в канун Дня Победы в берлинском Трептов-парке был установлен памятник. Война звали:</string>
    <string name="a44">Трифон Лукьянович</string>
    <string name="a45">Борис Полевой</string>
    <string name="a46">Николай Масолов</string>
    <string name="a47">12. День победы мы отмечаем:</string>
    <string name="a48">Отправить</string>
    <string name="a49">Обработка результатов анкетирования</string>
    <string name="a50">5 июня</string>
    <string name="a51">9 мая</string>
    <string name="a52">1 сентября</string>
    <string name="a53">Сумма правильного ответа</string>

</resources>
