<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="instagram.downloader.com.testssinchronization.MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a2" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/a3"/>

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a4" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a5" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/a6" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a7" />

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a8" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a9" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a10" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a11" />

    <RadioGroup
        android:id="@+id/rg3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a12" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a13" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a14" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a15" />

    <RadioGroup
        android:id="@+id/rg4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a16" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a17" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/a18" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a19" />

    <RadioGroup
        android:id="@+id/rg5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a20" />

        <RadioButton
            android:id="@+id/radioButton14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/a21" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a22" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a23" />

    <RadioGroup
        android:id="@+id/rg6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a24" />

        <RadioButton
            android:id="@+id/radioButton17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a25" />

        <RadioButton
            android:id="@+id/radioButton18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a26" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a27" />

    <RadioGroup
        android:id="@+id/rg7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a28" />

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a29" />

        <RadioButton
            android:id="@+id/radioButton21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a30" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a31" />

    <RadioGroup
        android:id="@+id/rg8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a32" />

        <RadioButton
            android:id="@+id/radioButton23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a33" />

        <RadioButton
            android:id="@+id/radioButton24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a34" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a35" />

    <RadioGroup
        android:id="@+id/rg9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a36" />

        <RadioButton
            android:id="@+id/radioButton26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a37" />

        <RadioButton
            android:id="@+id/radioButton27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a38" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a39" />

    <RadioGroup
        android:id="@+id/rg10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a40" />

        <RadioButton
            android:id="@+id/radioButton29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a41" />

        <RadioButton
            android:id="@+id/radioButton30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a42" />
    </RadioGroup>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/a48"
            tools:ignore="InefficientWeight" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a49" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a1" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a2" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a53" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Процент правильных ответов" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />


    </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
